--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,111 @@
-title: Tim Kreitner
-theme: jekyll-theme-cayman
-markdown: kramdown
+# main text of home
+name: Tim Kreitner
+bio: Mechanical engineer, computational engineer, data scientist
+
+# twitter summary info
+description: Tims ideas.
+
+# if it's an external image, update below for true
+# better with square images
+#external-image: false
+#picture: assets/images/elipapa-calder-logo-circ-invert.png
+#logo: assets/images/elipapa-calder-logo-circ-invert.png
+
+# If you want to include your resume, set to true
+# and specify source (external or local).
+resume: true
+resume-external: true
+resume-url: https://tabassco.github.io/timscv/index
+
+url: https://tabassco.github.io
+# your url: http://USERNAME.github.io
+
+# permalink: /:title/
+permalink: /blog/:title.html
+
+
+# To enable google analytics, supply your token below
+# analytics-google: 'UA-100695591-1'
+
+# To enable piwik tracking, supply your url & site ID below
+# analytics-piwik-url: 'piwik.my-host.com'
+# analytics-piwik-id: 1
+
+# if you don't want comments in your posts, leave categories empty
+# disqus:
+#  shortname: mydisqus # enter this from your disqus account
+#  categories: #[blog, project] # only show disqus for posts that have these categories
+
+# if you don't have any of social below, comment the line
+# facebook: myfacebook
+# twitter: elipapa
+# google: mygoogle
+# instagram: myinstagram
+# pinterest: mypinterest
+# linkedin: eliseopapa
+# youtube: myyoutube
+# spotify: vivissima
+github: tabassco
+# lastfm: mylastfm
+# stackoverflow: 7044681/mystackoverflow
+# quora: userquora
+# reddit: username
+# medium: elipapa
+# orcid: 0000-0002-2467-7759
+# vimeo: myvimeo
+# email: myemail@gmail.com
+
+authors:
+    tabassco:
+        name: Tim Kreitner
+        bio: Mechanical engineer, computational engineer
+        external-image: false
+#        picture: assets/images/elipapa-calder-logo-circ-invert.png
+
+collections:
+  work:
+    output: true
+    permalink: /:collection/:name
+
+# do you want a larger site? change the option below
+# options: [normal, large] | default: normal
+# normal = 560px / large = 810px
+width: normal
+
+# if you don't need pagination, comment the *paginate* configs below
+# paginate: 5
+# paginate_path: "blog/:num/"
+
+# if you don't need projects, comment the *projects* configs below
+projects: true
+
+# if you don't need "about" or "blog", comment them out below
+about: true
+# blog: true
+
+# do you want to show the "read time" of the posts?
+read-time: true
+
+# do you want to show the "tags" inside the posts?
+show-tags: true
+
+# related posts inside a post?
+related: true
+
+# Display links for next and previous posts for the specified categories
+post-advance-links: [blog]
+
+# show author block at the end of a post ?
+# show-author: true
+
+# do you want some animations?
+animation: true
+
+gems:
+  - jekyll-seo-tag
+  - jekyll-gist
+  - jekyll-feed
+  - jemoji
+
+jekyll-mentions:
+    base_url: https://github.com
