--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ description: Tims ideas.
 
 # if it's an external image, update below for true
 # better with square images
-#external-image: false
-#picture: assets/images/elipapa-calder-logo-circ-invert.png
-#logo: assets/images/elipapa-calder-logo-circ-invert.png
+external-image: false
+picture: assets/images/tim.png
+logo: assets/images/tim.png
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
