bits and pieces

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Tim Kreitner
-bio: Mechanical engineer, computational engineer, data scientist
+bio: mechanical engineer, compuational engineer, software developer
 
 # twitter summary info
 description: Tims ideas.
