update config for theme

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
+remote_theme: kondratyev-nv/jekyll-theme-littlefox
+
 # main text of home
 name: Tim Kreitner
 bio: mechanical engineer, compuational engineer, software developer
